--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,7 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: "Raleway", sans-serif;
+  --font-sans: "Open Sans", sans-serif;
   --font-mono: var(--font-geist-mono);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
@@ -341,7 +341,7 @@ body {
 }
 
 * {
-  font-family: Raleway;
+  font-family: "Open Sans", sans-serif;
 }
 
 button {
